Fix javascript error on IE, add error handling code in device prop edit page, fix starttime input value change when click schedule job

--- a/DeviceAdministration/Web/Content/styles/main.css
+++ b/DeviceAdministration/Web/Content/styles/main.css
@@ -683,7 +683,7 @@ nav .selected {
 }
 .edit_form__labelsmall {
   color: gray;
-  font-size: 0.2em;
+  font-size: 0.6em;
   display: block;
   line-height: 100%;
 }
